# minions

cpp/: CMakeLists.txt  README.md
cpp/bindings/: minions_cpp.cpp
cpp/bindings/stubs/: minions_cpp_py.pyi
cpp/include/minions/: minions.hpp
cpp/include/minions/clients/: base.hpp
cpp/include/minions/core/: usage.hpp
